Create a builder for a single field `record`.