@@ -21,9 +21,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <maven-enforcer-plugin.version>3.5.0</maven-enforcer-plugin.version>
+        <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
 
         <auto-service.version>1.1.1</auto-service.version>
         <compile-testing.version>0.21.0</compile-testing.version>
+        <guava.version>33.3.1-jre</guava.version>
         <javapoet.version>0.5.0</javapoet.version>
         <junit.version>5.11.3</junit.version>
 
@@ -52,6 +54,22 @@
                 </executions>
             </plugin>
         </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>${maven-surefire-plugin.version}</version>
+                    <configuration>
+                        <argLine>
+                            --add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+                            --add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
+                            --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+                        </argLine>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
 
     <dependencyManagement>
@@ -67,6 +85,11 @@
                 <groupId>com.google.auto.service</groupId>
                 <artifactId>auto-service</artifactId>
                 <version>${auto-service.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.google.testing.compile</groupId>
